--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "rupiah-format": "^1.0.0",
     "stylis": "4.1.4",
     "stylis-plugin-rtl": "2.1.1",
+    "swagger-ui-express": "^5.0.0",
     "yup": "1.1.1"
   },
   "devDependencies": {
