--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "stylis": "4.1.4",
     "stylis-plugin-rtl": "2.1.1",
     "swagger-ui-express": "^5.0.0",
+    "sweetalert2": "^11.10.2",
     "yup": "1.1.1"
   },
   "devDependencies": {
